--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <main>
             <header>
-                <h1>Titulo do Site</h1>
+                <h1>cursos gratis</h1>
             </header>
             <article>
-                <h2>Artigo 001</h2>
-                <p>texto artigo 001</p>
+                <h2>curso de html e css3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rem vel sapiente, quo deserunt incidunt commodi repudiandae mollitia porro reprehenderit fugiat laboriosam, quidem ducimus. Quam nulla modi provident adipisci quidem.</p>
             </article>
             <article>
                 <h2>Artigo 002</h2>
